--- a/my-app/src/Contact.css
+++ b/my-app/src/Contact.css
@@ -6,7 +6,7 @@
 
 .contact-header {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 20px;
   margin-bottom: 50px;
 }
 
